--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-    "description": "whatsapp pair code generator by DGXeon",
-    "main": "./index.js",
-  "engines" : { 
-    "npm" : ">=10.8.2",
-    "node" : ">=22.7.0"
-    },
-    "scripts": {
-    "start": "node pair.js"
+  "name": "whatsapp-pair-code-generator",
+  "version": "1.0.0",
+  "description": "WhatsApp pair code generator",
+  "main": "./index.js",
+  "engines": {
+    "node": ">=18.0.0 <23.0.0",
+    "npm": ">=8.0.0 <11.0.0"
+  },
+  "scripts": {
+    "start": "node pair.js",
+    "dev": "nodemon pair.js"  // Useful for development
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
+    "@whiskeysockets/baileys": "6.6.0", //Example version
     "qrcode": "^1.5.4",
     "awesome-phonenumber": "^6.10.0",
     "pino": "^9.3.2",
-    "phone" : "3.1.50",
+    "phone": "3.1.50",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "path": "^0.12.7"
-   }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1" // Useful for development
+  },
+  "keywords": [
+    "whatsapp",
+    "pair code",
+    "generator"
+  ],
+  "author": "Sumit developer",
+  "license": "MIT"
 }
